--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
-  "exclude": ["src/data/**/*"],
+  "exclude": ["src/data/**.*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
