--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@netlify/functions": "^2.7.0",
+    "axios": "^1.7.2",
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -40,7 +42,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "netlify-cli": "^17.20.0",
+    "netlify-cli": "^17.23.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   }
