--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "https://github.com/Hallelujah78/crossword-app"
   },
   "scripts": {
+    "ndev": "netlify dev",
     "dev": "vite --host",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -22,6 +23,7 @@
   "dependencies": {
     "@netlify/functions": "^2.7.0",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
