--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "styled-reset": "^4.5.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.1",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
