--- a/biome.json
+++ b/biome.json
@@ -2,5 +2,8 @@
   "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
   "files": {
     "maxSize": 4194304
+  },
+  "linter": {
+    "rules": {}
   }
 }
