--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.0.8",
+    "openai": "^4.51.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
