fix: fix TS error relating to initializing state
Tried to deploy to Netlify, but it won't build since TS is set to
strict. Decided to address all TS warnings/errors before deploying.
Many errors relate to state being initialized from local storage if it
exists, or from initial state in the src/state folder. Fixed gridState
initialization so that gridState can never be undefined. Technically, I
don't think it could ever be undefined, but fixed without using non-null
assertion, which AFAIK is bad practice.

--- a/package.json
+++ b/package.json
@@ -4,14 +4,10 @@
   "description": "An attempt to programmatically generate a crossword",
   "main": "index.tsx",
   "type": "module",
-  "author": {
-    "name": "Gavan Browne",
-    "email": "gavan.browne@gmail.com",
-    "url": "https://gwib-personal-portfolio-react.netlify.app/"
-  },
+  "author": "Gavan Browne <gavan.browne@gmail.com> (https://gwib-personal-portfolio-react.netlify.app/)",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Hallelujah78/crossword-app"
+    "url": "git+https://github.com/Hallelujah78/crossword-app.git"
   },
   "scripts": {
     "ndev": "netlify dev",
@@ -49,5 +45,10 @@
     "netlify-cli": "^17.23.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
-  }
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Hallelujah78/crossword-app/issues"
+  },
+  "homepage": "https://github.com/Hallelujah78/crossword-app#readme"
 }
