fix: fix various TypeScript errors
Deleted SolveGrid, replaced by SolveGridRefactor. Fixed error in
answers2.ts, but not sure what was causing it. Removing a duplicate word
"WEATHER" fixed the issue. The fact that the word was a duplicate should
make no difference - i.e. there are two entries for "NOTHING" with
different frequencies.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
-  "exclude": ["src/state/**.*"],
+  "exclude": ["src/state/**.*", "src/state/answers2.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
