--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
   "bugs": {
     "url": "https://github.com/Hallelujah78/crossword-app/issues"
   },
-  "homepage": "https://github.com/Hallelujah78/crossword-app#readme"
+  "homepage": "https://github.com/Hallelujah78/crossword-app#readme",
+  "engines": {
+  "node": "24.x"
+}
 }
