fix: TS and Biome warnings/errors + import order
Updated Biome.json so it orders the imports on save.
Fixed use of filter where I was conditionally returning true/false,
and so true/false wasn't always returned. Many changed files are simply
reordering of imports. Fixed minor TS/Biome warnings.

--- a/biome.json
+++ b/biome.json
@@ -5,5 +5,14 @@
   },
   "linter": {
     "rules": {}
+  },
+  
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "on"
+      }
+    }
   }
+
 }
